--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,6 +1,7 @@
-.footer, .home-decor {
+.footer,
+.home-decor {
   .background-default {
-    background: linear-gradient(98.86deg, #8f489c 35.14%, #faa61a 109.56%);
+    background: linear-gradient(98.86deg, $primary 35.14%, $primary-100 109.56%);
     opacity: 0.1;
   }
 }
