--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -21,8 +21,7 @@ $blue-900: #2a4365;
 $blue: #2f80ed;
 
 $primary: #FF3B30;
-$primary-100: rgba(143, 72, 156, 0.1);
-$primary-200: rgba(179, 94, 194, 0.12);
+$primary-100: #ffe7e6;
 
 $background: #fbfbfb;
 
